5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1649_1055.log
== SUBMITION (2019-04-15 23:17:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v = float(input("insira a velocidade inicial:"))
a = radians((float(input("insira o angulo do vetor:"))))
D = float(input("insira a distancia horizontal"))
g = 9.8
R = ((v**2)*sin(2*a))/g
if (abs(D-R) <= 0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.129393
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    a = radians((float(input())))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:17:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v = float(input("insira a velocidade inicial:"))
a = radians((float(input("insira o angulo do vetor:"))))
D = float(input("insira a distancia horizontal"))
g = 9.8
R = ((v**2)*sin(2*a))/g
if (abs(D-R) <= 0.1):
	print("sim")
else:
 print("nao")
-- EXECUTION TIME:
0.158837
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    a = radians((float(input())))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:18:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
V = float(input("insira a velocidade inicial:"))
a = radians((float(input("insira o angulo do vetor:"))))
D = float(input("insira a distancia horizontal"))
g = 9.8
R = ((v**2)*sin(2*a))/g
if (abs(D-R) <= 0.1):
	print("sim")
else:
 print("nao")
-- EXECUTION TIME:
0.186429
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    a = radians((float(input())))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:22:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
from math import
V = float(input("insira a velocidade inicial:"))
a = radians((float(input("insira o angulo do vetor:"))))
D = float(input("insira a distancia horizontal"))
g = 9.8
R = ((v**2)*sin(2*a))/g
if (abs(D-R) <= 0.1):
	print("sim")
else:
 print("nao")
-- EXECUTION TIME:
0.220253
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 3
    from math impor
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:23:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
from math import
v = float(input("insira a velocidade inicial:"))
a = radians((float(input("insira o angulo do vetor:"))))
D = float(input("insira a distancia horizontal"))
g = 9.8
R = ((v**2)*sin(2*a))/g
if (abs(D-R) <= 0.1):
	print("sim")
else:
 print("nao")
-- EXECUTION TIME:
0.135803
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 3
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:24:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
from math import
v = float(input("insira a velocidade inicial:"))
a = radians((float(input("insira o angulo do vetor:"))))
D = float(input("insira a distancia horizontal:"))
g = 9.8
R = ((v**2)*sin(2*a))/g
if (abs(D-R) <= 0.1):
	print("sim")
else:
 print("nao")
-- EXECUTION TIME:
0.165253
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 3
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:27:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
from math import *
v = float(input("insira a velocidade inicial:"))
a = radians((float(input("insira o angulo do vetor:"))))
D = float(input("insira a distancia horizontal"))
g = 9.8
R = ((v**2)*sin(2*a))/g
if (abs(D-R) <= 0.1):
	print("sim")
else:
 print("nao")
-- EXECUTION TIME:
0.211787
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
